--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "@polymer/paper-button": "^3.0.1",
         "@ramonak/react-progress-bar": "^4.2.0",
         "@solana/buffer-layout": "^4.0.0",
-        "@solana/spl-token": "^0.2.0",
+        "@solana/spl-token": "0.2.0",
         "@solana/spl-token-registry": "^0.2.7",
         "@solana/web3.js": "^1.64.0",
         "@truffle/hdwallet-provider": "^2.1.6",
